# pico-weather

./: CMakeLists.txt  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  index.js  package-lock.json  package.json
backend/api/: api.js  history.js  sensors.js
backend/models/: Humidity.js  Illuminance.js  Temperature.js  UVIndex.js  WeatherData.js
config/: FreeRTOSConfig.h  mbedtls_config.h
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: layout.js  page.js
frontend/src/app/components/: DataCard.js  DeviceTab.js  DeviceTemperature.js  GraphCard.js  IlluminanceCard.js  NormalCard.js  UVIndexCard.js  WeatherTab.js
pico/: .gitignore  CMakeLists.txt  FreeRTOS_Kernel_import.cmake
pico/config/: FreeRTOSConfig.h  lwipopts.h
pico/src/: ltr390.c  ltr390.h  main.c  sht30.c  sht30.h
proxy/: nginx.conf
scripts/: flash.sh
src/: CMakeLists.txt  lwipopts.h  main.c
